# Accelerated-Downloader

./: README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat
src/: settings.json  test_downloader.py  test_rig.py
src/adp/: main.py
src/adp/core/: app_settings.py  downloader.py  logging_setup.py  models.py  paths.py  scheduler.py  session.py  speed_limiter.py  stats_aggregator.py  stats_store.py
src/adp/dev/: test_rig.py
src/adp/gui/: dialogs.py  main_window.py  speed_graph_widget.py  stats_panel.py  theme.py  torrent_dialogs.py  torrent_panel.py  torrent_widgets.py  tray.py  widgets.py
src/adp/torrent/: engine.py  models.py  session_store.py
src/adp/utils/: format.py  url_utils.py
tests/: conftest.py  mock_server.py  test_downloader_engine.py  test_format_utils.py  test_gui_smoke.py  test_logging_setup.py  test_main_window_degradation.py  test_network_smoke.py  test_paths.py  test_scheduler.py  test_session.py  test_speed_limiter.py  test_stats_aggregator.py  test_stats_panel.py  test_stats_store.py  test_torrent_engine.py  test_torrent_panel.py  test_url_utils.py  torrent_swarm.py
